[package]
name = "sandbox"
version = "0.1.0"
authors = ["Vail Dorchester <vail.dorchester@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leaf = {path = "../engine"}
specs = { version = "*", features = ["specs-derive"] }
log = "*"
cgmath = "*"
